# LRA-Calculator-C

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
docs/architecture/: system-overview.md
docs/tutorials/: quick-start.md
src/: cache_manager.c  cache_manager.h  ffmpeg_processor.c  ffmpeg_processor.h  file_scanner.c  file_scanner.h  main.c  result_manager.c  result_manager.h  utils.c  utils.h
test/: CMakeLists.txt
test/integration/: test_integration.c
test/unit/: test_cache_manager.c  test_file_scanner.c  test_result_manager.c  test_utils.c
